--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "crypto-browserify": "^3.12.1",
+    "framer-motion": "^12.23.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5"
   },
